--- a/index.html
+++ b/index.html
@@ -59,16 +59,15 @@
             <h1 class="animate__animated animate__backInUp">LITEAGLE</h1>
             <h2 class="animate__animated animate__backInLeft animate__delay-1s">Professional and Reliable Legal Services
             </h2>
-            <h3 class="animate__animated animate__backInRight animate__delay-1s">Lorem ipsum dolor sit amet,
-                consectetur
-                adipisicing elit.
-                Vitae quisquam molestiae delectus quasi sunt
-                amet magnam veritatis fuga asperiores eligendi? Quis iste, error eum autem cupiditate iure omnis ab rem.
+            <h3 class="animate__animated animate__backInRight animate__delay-1s">Our highly motivated team of
+                professionals helps our clients by giving tailored and most reliable legal solutions for the challenges
+                faced by them. We at Liteagle gives the client very responsive and strategic advice in respect of
+                client’s legal queries. In Liteagle the team is devoted towards the solutions oriented approach.
             </h3>
-            <div class="sec1-contact animate__animated animate__backInUp animate__delay-2s"><a
+            <!-- <div class="sec1-contact animate__animated animate__backInUp animate__delay-2s"><a
                     href="contact-us.html">Contact Us</a>
-            </div>
-            <div class="sec1-social animate__animated animate__backInUp animate__delay-2s">
+            </div> -->
+            <!-- <div class="sec1-social animate__animated animate__backInUp animate__delay-2s">
                 <a href="https://www.facebook.com/Liteagle" target="_blank"><i
                         class="fab fa-facebook-f animate__animated animate__backInUp animate__delay-2s"></i></a>
                 <a href="https://www.instagram.com/official_liteagle/" target="_blank"><i
@@ -77,7 +76,7 @@
                         class="fab fa-twitter animate__animated animate__backInUp animate__delay-2s"></i></a>
                 <a href="mailto:info@liteagle.com" target="_blank"><i
                         class="far fa-envelope animate__animated animate__backInUp animate__delay-2s"></i></a>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -94,7 +93,7 @@
                     more fields through our highly trained professional. We, Liteagle LLP, situated at Safdarjung
                     Enclave, Delhi, are a one stop shop offering a wide array of legal services. We work professionally
                     and ethically with a result oriented approach. We are strongly dedicated to our work and our
-                    services are remarkable. Our charges are very affordable.</p>
+                    services are remarkable.</p>
                 <a href="about-us.html">Read More -></a>
             </div>
         </div>
@@ -104,9 +103,9 @@
     <div class="sec3">
         <div class="sec3-left" data-aos="fade-up">
             <h1>Having 7+ Years of Experience in Legal Sevice</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat.</p>
+                ex ea commodo consequat.</p> -->
             <h2><i class="fas fa-check-square"></i>Expert Legal Services</h2>
             <h2><i class="fas fa-check-square"></i>Expert Attorneys</h2>
             <h2><i class="fas fa-check-square"></i>Highly Recommended</h2>
@@ -115,12 +114,12 @@
             <div class="sec3-box sec3-box1">
                 <div class="sec3-box-top">
                     <i class="far fa-thumbs-up"></i>
-                    <h5>100% Success Rate Guaranteed</h5>
+                    <h5>Highest Success Rate Guaranteed</h5>
                 </div>
-                <div class="sec3-box-bottom">
+                <!-- <div class="sec3-box-bottom">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
                     dolore magna aliqua.
-                </div>
+                </div> -->
             </div>
 
             <div class="sec3-box sec3-box2">
@@ -128,10 +127,10 @@
                     <i class="far fa-thumbs-up"></i>
                     <h5>Highly Recommended</h5>
                 </div>
-                <div class="sec3-box-bottom">
+                <!-- <div class="sec3-box-bottom">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
                     dolore magna aliqua.
-                </div>
+                </div> -->
             </div>
 
             <div class="sec3-box sec3-box3">
@@ -139,10 +138,10 @@
                     <i class="far fa-thumbs-up"></i>
                     <h5>Expert Legal Services</h5>
                 </div>
-                <div class="sec3-box-bottom">
+                <!-- <div class="sec3-box-bottom">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
                     dolore magna aliqua.
-                </div>
+                </div> -->
             </div>
 
             <div class="sec3-box sec3-box4">
@@ -150,10 +149,10 @@
                     <i class="far fa-thumbs-up"></i>
                     <h5>Ensure Quality Support</h5>
                 </div>
-                <div class="sec3-box-bottom">
+                <!-- <div class="sec3-box-bottom">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
                     dolore magna aliqua.
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -161,45 +160,45 @@
     <!------------------------------- sec4 ---------------------------- -->
     <div class="sec4" data-aos="fade-up">
         <h1>Our Services</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam delectus rem quisquam voluptatum ullam
+        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam delectus rem quisquam voluptatum ullam
             reiciendis nemo accusamus facilis vero, sit et quo explicabo perspiciatis eos! Blanditiis sapiente tenetur
-            minus architecto?</p>
+            minus architecto?</p> -->
         <div class="sec4-bottom">
             <div class="sec4-box sec4-box1">
                 <h1>Corporate Law</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
                     repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
-                    deleniti officia quasi.</p>
+                    deleniti officia quasi.</p> -->
             </div>
             <div class="sec4-box sec4-box2">
-                <h1>commercial Law</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                <h1>Commercial Law</h1>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
                     repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
-                    deleniti officia quasi.</p>
+                    deleniti officia quasi.</p> -->
             </div>
             <div class="sec4-box sec4-box3">
-                <h1>Contarcts</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                <h1>Contracts</h1>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
                     repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
-                    deleniti officia quasi.</p>
+                    deleniti officia quasi.</p> -->
             </div>
             <div class="sec4-box sec4-box3">
                 <h1>Employment Law</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
                     repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
-                    deleniti officia quasi.</p>
+                    deleniti officia quasi.</p> -->
             </div>
             <div class="sec4-box sec4-box2">
                 <h1>Industrial Relations</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
                     repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
-                    deleniti officia quasi.</p>
+                    deleniti officia quasi.</p> -->
             </div>
             <div class="sec4-box sec4-box1">
                 <h1>Disputes Resolution</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
                     repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
-                    deleniti officia quasi.</p>
+                    deleniti officia quasi.</p> -->
             </div>
         </div>
 
