--- a/our-services.html
+++ b/our-services.html
@@ -57,9 +57,9 @@
     <div class="ser-sec1">
         <div class="abt-sec1-left">
             <h1>Our Services</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, ut aperiam? Eligendi, atque earum.
+            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, ut aperiam? Eligendi, atque earum.
                 Mollitia fugit veniam, at dolorem nulla temporibus dolor accusamus assumenda magni minus modi iste
-                beatae commodi?</p>
+                beatae commodi?</p> -->
         </div>
         <div class="abt-sec1-right">
             <img src="./img/services/alvaro-serrano-hjwKMkehBco-unsplash.jpg" alt="">
@@ -68,9 +68,9 @@
 
     <div class="ser-sec2 animate__animated animate__backInUp">
         <h1>Areas Of Practice</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nostrum neque delectus. Quaerat quam
+        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nostrum neque delectus. Quaerat quam
             voluptate molestiae facilis, beatae nemo sunt aspernatur aut vero earum, fugit enim vitae magni itaque!
-            Quis!</p>
+            Quis!</p> -->
         <div class="ser-sec2-down">
             <div class="ser-box ser-box1">
                 <h1>Corporate, Commercial and Contracts</h1>
