--- a/our-services.html
+++ b/our-services.html
@@ -268,8 +268,8 @@
         <div class="footer-inner">
             <div class="footer-box">
                 <img src="./img/logo/logo.png" alt="">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias ratione laudantium, tempora omnis
-                    veniam dicta quia quidem dolorum illo</p>
+                <h3>LITEAGLE LLP</h3>
+                <p>Ease your business with our legal expertise.</p>
             </div>
             <div class="footer-box">
                 <h2>Quick Links</h2>
