--- a/our-team.html
+++ b/our-team.html
@@ -101,7 +101,7 @@
                 experience in drafting corporate agreements, Service Contracts, Non-Disclosure agreements, employment
                 contracts and other legal documents. She has been involved in assisting and guiding new companies and
                 foreign clients in establishing their existence and setting up in India and advising them on day to day
-                queries related to the corporate laws and Compliances.</p>
+                queries related to the corporate laws and Compliances. </p>
             <!-- <div class="te-right-a">
                 <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a>
@@ -136,15 +136,15 @@
         </div>
         <div class="te-right">
             <h1>SP Singh Chawla</h1>
-            <p>SP Singh Chawla is a Law Graduate from Bharati Vidyapeeth University (BVP), Pune and is a practicing
-                advocate in Delhi and registered with Delhi High Court Bar Association since 2012. He has done LL.M
-                (Corporate Law Specialisation) from National Law University, Delhi. He is also member of the Institute
-                of Company Secretaries of India. He has also been a member of Corporate Law Committee of Northern India
-                Regional Council (‘NIRC’) of Institute of Company Secretaries of India (‘ICSI’) for the year 2017-18. He
-                is dealing in all kind of corporate law litigation matters inter-alia corporate restructuring, IBC
-                matters and restoration along with advisory on corporate law matters, transactional matters and other
-                matters related to civil litigation. He has taken various sessions at ICSI and ICAI (CWA) on different
-                arenas of topics.</p>
+            <p>SP Singh is a Law Graduate from Bharati Vidyapeeth University (BVP), Pune and is a practicing advocate in
+                Delhi and registered with Delhi High Court Bar Association since 2012. He has done LL.M (Corporate Law
+                Specialisation) from National Law University, Delhi. He is also member of the Institute of Company
+                Secretaries of India. He has also been a member of Corporate Law Committee of Northern India Regional
+                Council (‘NIRC’) of Institute of Company Secretaries of India (‘ICSI’) for the year 2017-18. He is
+                dealing in all kind of corporate law litigation matters inter-alia corporate restructuring, IBC matters
+                and restoration along with advisory on corporate law matters, transactional matters and other matters
+                related to civil litigation. He has taken various sessions at ICSI and ICAI (CWA) on different arenas of
+                topics.</p>
             <!-- <div class="te-right-a">
                 <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a>
@@ -158,14 +158,14 @@
         </div>
         <div class="te-right">
             <h1>Sanchit Mathur</h1>
-            <p>Sanchit Mathur is a member of the Institute of Company Secretaries of India and is a law graduate from
-                Choudhary Charan Singh University and also a certified CSR Professional. He has more than four years of
-                extensive experience in Corporate Laws and Taxation, and a thorough knowledge of Company Law, SEBI Laws,
-                Limited Liability Partnership Law, Tobacco Board etc. Sanchit work ethic is admirable, he gives all his
-                energy to his projects and makes sure that his quality of work exceeds expectations. Sanchit’s passion
-                and love for his work resonates with his peers. Sanchit is having an extensive experience in Secretarial
-                Audits, Financial and Management, Capital Reconciliation, Share Transfer Audits, Audit of Corporate
-                Governance Systems, FEMA, Banking Companies and various other corporate compliances.</p>
+            <p>Sanchit is a member of the Institute of Company Secretaries of India and is a law graduate from Choudhary
+                Charan Singh University and also a certified CSR Professional. He has more than four years of extensive
+                experience in Corporate Laws and Taxation, and a thorough knowledge of Company Law, SEBI Laws, Limited
+                Liability Partnership Law, Tobacco Board etc. Sanchit work ethic is admirable, he gives all his energy
+                to his projects and makes sure that his quality of work exceeds expectations. Sanchit’s passion and love
+                for his work resonates with his peers. Sanchit is having an extensive experience in Secretarial Audits,
+                Financial and Management, Capital Reconciliation, Share Transfer Audits, Audit of Corporate Governance
+                Systems, FEMA, Banking Companies and various other corporate compliances.</p>
             <!-- <div class="te-right-a">
                 <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a>
@@ -179,16 +179,13 @@
         </div>
         <div class="te-right">
             <h1>Vivek Singh</h1>
-            <p>Shashank is a member of Institute of Company Secretaries of India and law graduate from University of
-                Delhi. Shashank is also visiting faculty at Lovely Professional University, Jalandhar, Punjab. He has
-                also adjudged various moot courts at the Lovely Professional University, Jalandhar, Punjab. Shashank is
-                a seasoned lawyer and enjoyed good command in appearing before various courts and Tribunals and
-                strategizing & advising on litigation strategies. Shashank comes with a background of vast experience of
-                more than seven years in the field of Employment Laws, Corporate and Commercial laws. Shashank handled
-                day to day queries of the clients on aspects of various labour laws, corporate laws etc. Shashank is
-                handling various clients in respect of litigation and compliances in Delhi NCR, Haryana, Punjab,
-                Maharashtra and Uttar Pradesh etc. His forte lies in imparting training, holding seminar and workshop on
-                POSH and Labour Law Compliances.</p>
+            <p>Vivek is Law Graduate and is having Bachelor’s Degree in Commerce from Delhi University. He is practising
+                as an advocate with specialisation in Goods and Service Tax, Income Tax, Bookkeeping and Accounting. He
+                has more than 6 years of experience in Taxation Laws, Tax Planning, Accountancy and Bookkeeping. His
+                areas of practice are Goods and Service Tax, Income Tax Assessments, Accounts Management and
+                Bookkeeping. His forte lies on advising his clients on managing day to day books of accounts, stock
+                management, bank reconciliation, managing profit and loss, internal audits of the books and finalise the
+                balance sheet of the companies.</p>
             <!-- <div class="te-right-a">
                 <a href="https://www.linkedin.com/in/vivek-singh-aa28b765" target="_blank"><i
                         class="fab fa-linkedin"></i></a>
@@ -202,8 +199,8 @@
         <div class="footer-inner">
             <div class="footer-box">
                 <img src="./img/logo/logo.png" alt="">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias ratione laudantium, tempora omnis
-                    veniam dicta quia quidem dolorum illo</p>
+                <h3>LITEAGLE LLP</h3>
+                <p>Ease your business with our legal expertise.</p>
             </div>
             <div class="footer-box">
                 <h2>Quick Links</h2>
