--- a/about-us.html
+++ b/about-us.html
@@ -15,9 +15,9 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./icofont/icofont.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="./icofont/icofont.min.css"> -->
 </head>
 
 <body>
@@ -125,7 +125,8 @@
             </div>
             <div class="abt-sec3-box">
                 <i class="icofont-law-scales"></i>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, nesciunt velit aut ipsam fugit at
+                <p>Firm in well placed to service the requirements of its clients across India in the fields of
+                    Employment Laws, Corporate and Commercial laws including the compliance under the said laws.
                 </p>
             </div>
         </div>
@@ -136,8 +137,8 @@
         <div class="footer-inner">
             <div class="footer-box">
                 <img src="./img/logo/logo.png" alt="">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias ratione laudantium, tempora omnis
-                    veniam dicta quia quidem dolorum illo</p>
+                <h3>LITEAGLE LLP</h3>
+                <p>Ease your business with our legal expertise.</p>
             </div>
             <div class="footer-box">
                 <h2>Quick Links</h2>
