--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -375,8 +375,8 @@
             <div class="footer-inner">
                 <div class="footer-box">
                     <img src="./img/logo/logo.png" alt="">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias ratione laudantium, tempora omnis
-                        veniam dicta quia quidem dolorum illo</p>
+                    <h3>LITEAGLE LLP</h3>
+                    <p>Ease your business with our legal expertise.</p>
                 </div>
                 <div class="footer-box">
                     <h2>Quick Links</h2>
