--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!------------------------------- sec3 ---------------------------- -->
     <div class="sec3">
         <div class="sec3-left" data-aos="fade-up">
-            <h1>Having 7+ Years of Experience in Legal Sevice</h1>
+            <h1>Having 7+ Years of Experience in Legal Service</h1>
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p> -->
@@ -165,24 +165,6 @@
             minus architecto?</p> -->
         <div class="sec4-bottom">
             <div class="sec4-box sec4-box1">
-                <h1>Corporate Law</h1>
-                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
-                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
-                    deleniti officia quasi.</p> -->
-            </div>
-            <div class="sec4-box sec4-box2">
-                <h1>Commercial Law</h1>
-                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
-                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
-                    deleniti officia quasi.</p> -->
-            </div>
-            <div class="sec4-box sec4-box3">
-                <h1>Contracts</h1>
-                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
-                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
-                    deleniti officia quasi.</p> -->
-            </div>
-            <div class="sec4-box sec4-box3">
                 <h1>Employment Law</h1>
                 <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
                     repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
@@ -190,6 +172,24 @@
             </div>
             <div class="sec4-box sec4-box2">
                 <h1>Industrial Relations</h1>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
+                    deleniti officia quasi.</p> -->
+            </div>
+            <div class="sec4-box sec4-box3">
+                <h1> Corporate Law</h1>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
+                    deleniti officia quasi.</p> -->
+            </div>
+            <div class="sec4-box sec4-box2">
+                <h1>Commercial Law </h1>
+                <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
+                    repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
+                    deleniti officia quasi.</p> -->
+            </div>
+            <div class="sec4-box sec4-box3">
+                <h1>Contracts</h1>
                 <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex laborum et ad enim aliquam. Accusamus
                     repellat ut quos, adipisci possimus sed cumque doloribus tempora labore, consectetur, quisquam
                     deleniti officia quasi.</p> -->
@@ -243,7 +243,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="testi-item">
-                                <div class="testi-avatar"><img src="img/testimonial/user1.jpg"></div>
+                                <div class="testi-avatar"><img src="img/testimonial/vaibhav.jpeg"></div>
                                 <div class="testimonials-text-before"><i class="fa fa-quote-right"></i></div>
                                 <div class="testimonials-text">
                                     <div class="listing-rating">
@@ -253,18 +253,14 @@
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                     </div>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when
-                                        an
-                                        unknown printer took a galley of type and scrambled it to make a type
-                                        specimen
-                                        book.</p>
+                                    <p>Professional. Efficient. Personable. The team at Liteagle executed my dissolution
+                                        expeditiously and fairly. Highly recommend their services.
+                                        We can't thank Liteagle enough for their care, work and time on the case.</p>
                                     <a href="#" class="text-link"></a>
                                     <div class="testimonials-avatar">
                                         <h3>Vaibhav</h3>
-                                        <h4>Owner</h4>
-                                        <h4>XYZ Firm</h4>
+                                        <!-- <h4>Owner</h4>
+                                        <h4>XYZ Firm</h4> -->
                                     </div>
                                 </div>
                                 <div class="testimonials-text-after"><i class="fa fa-quote-left"></i></div>
@@ -274,7 +270,7 @@
                         <!--second--->
                         <div class="swiper-slide">
                             <div class="testi-item">
-                                <div class="testi-avatar"><img src="img/testimonial/user2.jpg"></div>
+                                <div class="testi-avatar"><img src="img/testimonial/ankush.jfif"></div>
                                 <div class="testimonials-text-before"><i class="fa fa-quote-right"></i></div>
                                 <div class="testimonials-text">
                                     <div class="listing-rating">
@@ -284,18 +280,15 @@
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                     </div>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when
-                                        an
-                                        unknown printer took a galley of type and scrambled it to make a type
-                                        specimen
-                                        book.</p>
+                                    <p>My experiences with Liteagle was stupendous through and through. These people
+                                        know their craft and walk the extra mile for you. I also appreciated working
+                                        with people that care for you on a
+                                        personal level instead of just handling you as a “case“.</p>
                                     <a href="#" class="text-link"></a>
                                     <div class="testimonials-avatar">
-                                        <h3>Shashank</h3>
-                                        <h4>Director</h4>
-                                        <h4>XYZ Firm</h4>
+                                        <h3>Ankush</h3>
+                                        <!-- <h4>Director</h4>
+                                        <h4>XYZ Firm</h4> -->
                                     </div>
                                 </div>
                                 <div class="testimonials-text-after"><i class="fa fa-quote-left"></i></div>
@@ -305,7 +298,7 @@
 
                         <div class="swiper-slide">
                             <div class="testi-item">
-                                <div class="testi-avatar"><img src="img/testimonial/user3.jpg"></div>
+                                <div class="testi-avatar"><img src="img/testimonial/manoj-thakur.jfif"></div>
                                 <div class="testimonials-text-before"><i class="fa fa-quote-right"></i></div>
                                 <div class="testimonials-text">
                                     <div class="listing-rating">
@@ -315,18 +308,14 @@
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                     </div>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when
-                                        an
-                                        unknown printer took a galley of type and scrambled it to make a type
-                                        specimen
-                                        book.</p>
+                                    <p>Shashank helped me finish a long time case I’ve been trying to wrap up for
+                                        years. He was completely understanding, professional and worked very diligently
+                                        to the end and I’m so grateful! Highly recommend!!</p>
                                     <a href="#" class="text-link"></a>
                                     <div class="testimonials-avatar">
-                                        <h3>Vivek</h3>
-                                        <h4>Developer</h4>
-                                        <h4>XYZ Firm</h4>
+                                        <h3>Manoj</h3>
+                                        <!-- <h4>Developer</h4>
+                                        <h4>XYZ Firm</h4> -->
                                     </div>
                                 </div>
                                 <div class="testimonials-text-after"><i class="fa fa-quote-left"></i></div>
@@ -336,7 +325,7 @@
                         <!--fourth-->
                         <div class="swiper-slide">
                             <div class="testi-item">
-                                <div class="testi-avatar"><img src="img/testimonial/4.jfif"></div>
+                                <div class="testi-avatar"><img src="img/testimonial/kaustubh.jfif"></div>
                                 <div class="testimonials-text-before"><i class="fa fa-quote-right"></i></div>
                                 <div class="testimonials-text">
                                     <div class="listing-rating">
@@ -346,18 +335,15 @@
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                     </div>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                        Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when
-                                        an
-                                        unknown printer took a galley of type and scrambled it to make a type
-                                        specimen
-                                        book.</p>
+                                    <p>We quickly had to get legal counsel and luckily for us, we found Liteagle. The
+                                        guidance was outstanding at
+                                        all times, prompt, timely and open for calls and quick updates, and worked
+                                        through all of the questions and issues on this case.</p>
                                     <a href="#" class="text-link"></a>
                                     <div class="testimonials-avatar">
-                                        <h3>Ankush</h3>
-                                        <h4>Designer</h4>
-                                        <h4>XYZ Firm</h4>
+                                        <h3>Kaustubh</h3>
+                                        <!-- <h4>Designer</h4>
+                                        <h4>XYZ Firm</h4> -->
                                     </div>
                                 </div>
                                 <div class="testimonials-text-after"><i class="fa fa-quote-left"></i></div>
