--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <div class="banner-image w-100 vh-100 d-flex justify-content-center align-items-center">
         <div class="sec1-content text-center">
             <h1 class="animate__animated animate__backInUp">LITEAGLE</h1>
+            <h4 class="animate__animated animate__backInLeft animate__delay-1s">Ease your business with our legal
+                expertise
+            </h4>
             <h2 class="animate__animated animate__backInLeft animate__delay-1s">Professional and Reliable Legal Services
             </h2>
             <h3 class="animate__animated animate__backInRight animate__delay-1s">Our highly motivated team of
